multiple updates (discussion hidden)

--- a/platform.html
+++ b/platform.html
@@ -314,7 +314,7 @@
                     <div class="row">
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\media-img\wechat.png" alt="">
+                                <a href="https://weixin.sogou.com/weixin?type=1&s_from=input&query=madison_news"><img src="img\media-img\wechat.png" alt=""></a>
                                 <div class="team-member-data">
                                     <h4 class="font-pt">微信公众号</h4>
                                     <div
@@ -326,7 +326,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\media-img\bilibili.png" alt="">
+                                <a href="https://space.bilibili.com/1911328064"><img src="img\media-img\bilibili.png" alt=""></a>
                                 <div class="team-member-data">
                                     <h4 class="font-pt">哔哩哔哩</h4>
                                     <div
@@ -338,7 +338,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\media-img\ximalaya.png" alt="">
+                                <a href="https://www.ximalaya.com/zhubo/224088273"><img src="img\media-img\ximalaya.png" alt=""></a>
                                 <div class="team-member-data">
                                     <h4 class="font-pt">喜马拉雅</h4>
                                     <div
@@ -356,7 +356,7 @@
                     <div class="row">
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\media-img\facebook.png" alt="">
+                                <a href="https://www.facebook.com/groups/1106540679700818"><img src="img\media-img\facebook.png" alt=""></a>
                                 <div class="team-member-data">
                                     <h4 class="font-pt">Facebook</h4>
                                     <div
@@ -368,7 +368,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img\media-img\youtube.png" alt="">
+                                <a href="https://www.youtube.com/channel/UCGVsW3aDXG9-l9rQfBTuhoQ"><img src="img\media-img\youtube.png" alt=""></a>
                                 <div class="team-member-data">
                                     <h4 class="font-pt">YouTube</h4>
                                     <div
