--- a/politics/category.html
+++ b/politics/category.html
@@ -334,8 +334,63 @@
                                             target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
-                                </div </div>
+                                </div> 
                             </div>
+                        </div>
+                        
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Politics</a>
+                                </div>
+                                <h4 class="font-pt">美政述评：Met Gala上的“革命家”</h4>
+                                <p class="gazette-post-date">2021年10月4日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/5_1.jpg" style="max-height: 250px; width: auto;" alt="美国走到了历史的风陵渡口">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>9月13日，纽约大都会艺术博物馆举办了年度慈善晚宴。这场名为met gala的晚宴在时尚界如雷贯耳，代表了美国最前沿的服装艺术风格，各路明星艺人和社会名流纷纷穿着最新潮和奇异的华服亮相，试图为自己夺得一个新闻头条。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="meta-gala.html" class="font-pt"
+                                            target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Politics</a>
+                                </div>
+                                <h4 class="font-pt">美政述评：“进步”景观——吊诡的政治策略</h4>
+                                <p class="gazette-post-date">2021年10月11日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/4_1.jpg" style="max-height: 250px; width: auto;" alt="美国走到了历史的风陵渡口">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>上周，麦迪讯评论员格鲁希详谈了民主党众议员AOC在奢侈晚宴的秀场行为，在今日的美政述评中，麦迪讯评论员赤色的黎明从“景观社会”理论出发，对AOC的行为进行解析，进而反映了美国进步派在美国既有政治框架和消费主义的思维逻辑下的尴尬处境。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="progress.html" class="font-pt"
+                                            target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
 
                             <div class="col-12 col-md-4">
                                 <br></br>
