--- a/politics/meta-gala.html
+++ b/politics/meta-gala.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>美政述评：Met Gala上的“革命家”</title>
+    <title>麦迪讯 | 美政述评：Met Gala上的“革命家”</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
