--- a/politics/progress.html
+++ b/politics/progress.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>美政述评：“进步”景观——吊诡的政治策略</title>
+    <title>麦迪讯 | 美政述评：“进步”景观——吊诡的政治策略</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
