add into category

--- a/society/category.html
+++ b/society/category.html
@@ -284,7 +284,69 @@
                                 </div>
                             </div>
                         </div>
+<!------------------------------------------------------->
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">社论 | 年轻人选择“躺平”有罪否？ </h4>
+                                <p class="gazette-post-date">2021年5月31日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/1_3.jpg" style="max-height: 250px; width: auto;"
+                                        alt="社论 | 年轻人选择“躺平”有罪否？">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>最近，一则叫《躺平即是正义》的帖子在网上风靡，文章记载了一个年轻人选择无工作的自由生活的故事。他说自己每月的花销控制在200块以内，每天就是解决食物的问题。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="liedown_guilty.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+<!------------------------------------------------------->
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">社论 | 从“土猪拱白菜”看什么是阶级————关于 “阶级”的社会学研究</h4>
+                                <p class="gazette-post-date">2021年7月5日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/2_1.png" style="max-height: 250px; width: auto;"
+                                        alt="社论 | 从“土猪拱白菜”看什么是阶级————关于 “阶级”的社会学研究">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>衡水中学张锡峰同学自“土猪拱白菜”引发的争议正在继续发酵。高考结束后，父母开汽车来接他同样引发了激烈的讨论。有网友认为，张锡峰同学的家庭并不拮据，也和很多家庭一样有房有车，这与张锡峰同学自己在演讲中所描述说的：看着其他同学被轿车接走而心中“翻江倒海”的场景是有出入的。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="pigs_hog_ cabbages.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+<!------------------------------------------------------->
                         <div class="col-12 col-md-4">
                             <br></br>
                         </div>
