renew 2 passages in society

--- a/society/category.html
+++ b/society/category.html
@@ -293,20 +293,20 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Society</a>
                                 </div>
-                                <h4 class="font-pt">社论 | 年轻人选择“躺平”有罪否？ </h4>
-                                <p class="gazette-post-date">2021年5月31日</p>
+                                <h4 class="font-pt">美国刑事诉讼流程（科普简易版）-01</h4>
+                                <p class="gazette-post-date">2021年9月26日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
-                                    <img src="img/1_3.jpg" style="max-height: 250px; width: auto;"
-                                        alt="社论 | 年轻人选择“躺平”有罪否？">
+                                    <img src="img/1_1.png" style="max-height: 250px; width: auto;"
+                                        alt="美国刑事诉讼流程（科普简易版）-01">
                                 </div>
                                 <!-- Post Excerpt -->
-                                <p>最近，一则叫《躺平即是正义》的帖子在网上风靡，文章记载了一个年轻人选择无工作的自由生活的故事。他说自己每月的花销控制在200块以内，每天就是解决食物的问题。
+                                <p>最近我社将发布一些关于美国刑事诉讼流程的介绍。华人作为美国的少数族裔，很多人对刑事诉讼基本知识了解甚少。一旦与执法人员打交道或遭遇刑事案件，不能做出有效的反应将会无形中使自己的权利受到侵害。因此，了解身边国家机器的运作方式是一个公民意识的人基本的素养。
                                 </p>
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="liedown_guilty.html" class="font-pt" target="_blank"
+                                        <a href="criminal_procedure_1.html" class="font-pt" target="_blank"
                                             title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
@@ -324,20 +324,19 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Society</a>
                                 </div>
-                                <h4 class="font-pt">社论 | 从“土猪拱白菜”看什么是阶级————关于 “阶级”的社会学研究</h4>
-                                <p class="gazette-post-date">2021年7月5日</p>
+                                <h4 class="font-pt">美国刑事诉讼流程（科普简易版）-02</h4>
+                                <p class="gazette-post-date">2021年10月5日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
-                                    <img src="img/2_1.png" style="max-height: 250px; width: auto;"
-                                        alt="社论 | 从“土猪拱白菜”看什么是阶级————关于 “阶级”的社会学研究">
+                                    <img src="img/2_3.png" style="max-height: 250px; width: auto;"
+                                        alt="美国刑事诉讼流程（科普简易版）-02">
                                 </div>
                                 <!-- Post Excerpt -->
-                                <p>衡水中学张锡峰同学自“土猪拱白菜”引发的争议正在继续发酵。高考结束后，父母开汽车来接他同样引发了激烈的讨论。有网友认为，张锡峰同学的家庭并不拮据，也和很多家庭一样有房有车，这与张锡峰同学自己在演讲中所描述说的：看着其他同学被轿车接走而心中“翻江倒海”的场景是有出入的。
-                                </p>
+                                <p>在上一阶段，我们介绍了嫌疑人遭逮捕后在警局的留置问题。如果，嫌疑人涉嫌的是轻罪，那么警方会出具一份 summon order，也叫传唤令，随之，嫌疑人会被释放，但必须按照传唤令上制定的时间到法院出庭。如果嫌疑人涉嫌重罪，并且检察官决定提议公诉，那么嫌疑人通常会在被决定起诉后的第二个工作日带到法院（initial appearance）。</p>
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="pigs_hog_ cabbages.html" class="font-pt" target="_blank"
+                                        <a href="criminal_procedure_2.html" class="font-pt" target="_blank"
                                             title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
