--- a/tech/category.html
+++ b/tech/category.html
@@ -264,6 +264,34 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Tech</a>
                                 </div>
+                                <h4 class="font-pt">奥密克戎毒株科普以及美国近期新冠疫情分析</h4>
+                                <p class="gazette-post-date">2021年1月1日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/omicron9.jpg" style="max-height: 250px; width: auto;"
+                                        alt="">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>最近，奥密克戎毒株在美国的流行打破了许多人对于疫情结束的幻想，奥密克戎以前所未有的速度在美利坚的土地上肆意驰骋，所到之处感染率飙升。那么，奥密克戎毒株究竟和以往的新冠毒株有着怎样的区别？奥密克戎目前流行的情况如何？我们留学生应该如何防御这种病毒呢？本篇文章就将对这几个问题进行深入分析，给尚在美国的海外学子们敲响警钟。 奥密克戎疫情可能是迄今为止传播最为凶险的一波疫情，这样的说法绝非危言耸听。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="omicron.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Tech</a>
+                                </div>
                                 <h4 class="font-pt">中医药是否对新冠肺炎有效</h4>
                                 <p class="gazette-post-date">2021年1月1日</p>
                                 <!-- Post Thumbnail -->
