--- a/category.html
+++ b/category.html
@@ -255,6 +255,170 @@
                         <div class="gazette-welcome-post">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
+                                <a href="#">Tech</a>
+                            </div>
+                            <h4 class="font-pt">奥密克戎毒株科普以及美国近期新冠疫情分析</h4>
+                            <p class="gazette-post-date">2021年1月1日</p>
+                            <!-- Post Thumbnail -->
+                            <div class="blog-post-thumbnail my-5">
+                                <img src="tech/img/omicron9.jpg" style="max-height: 250px; width: auto;"
+                                    alt="">
+                            </div>
+                            <!-- Post Excerpt -->
+                            <p>最近，奥密克戎毒株在美国的流行打破了许多人对于疫情结束的幻想，奥密克戎以前所未有的速度在美利坚的土地上肆意驰骋，所到之处感染率飙升。那么，奥密克戎毒株究竟和以往的新冠毒株有着怎样的区别？奥密克戎目前流行的情况如何？我们留学生应该如何防御这种病毒呢？本篇文章就将对这几个问题进行深入分析，给尚在美国的海外学子们敲响警钟。 奥密克戎疫情可能是迄今为止传播最为凶险的一波疫情，这样的说法绝非危言耸听。
+                            </p>
+                            <!-- Reading More -->
+                            <div class="post-continue-reading-share mt-30">
+                                <div class="post-continue-btn">
+                                    <a href="tech/omicron.html" class="font-pt" target="_blank"
+                                        title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                            aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <!-- Gazette Welcome Post -->
+                        <div class="gazette-welcome-post">
+                            <!-- Post Tag -->
+                            <div class="gazette-post-tag">
+                                <a href="#">Politics</a>
+                            </div>
+                            <h2 class="font-pt">AOC劣势2：人脉<br></br></h2>
+                            <p class="gazette-post-date">2021年1月20日</p>
+                            <!-- Post Thumbnail -->
+                            <div class="blog-post-thumbnail my-5">
+                                <img src="politics/img/1_1.jpg" style="max-height: 250px; width: auto;" alt="国会">
+                            </div>
+                            <!-- Post Excerpt -->
+                            <p>虽然克劳利和AOC都是以民主党人的身份来竞选成为民主党在纽约第十四选区众议员的候选人，两人受到的党内支持可是天差地别。在美国的选举中，政治人物的背书（Endorsement）是一个非常重要的资源。一位参选者收到了重要政治人物的背书意味着他能获得更多的媒体曝光，能够表现出更权威的竞选姿态，甚至意味着他能接收该政治人物的全部支持者。
+                            </p>
+                            <!-- Reading More -->
+                            <div class="post-continue-reading-share mt-30">
+                                <div class="post-continue-btn">
+                                    <a href="politics/aoc2.html" class="font-pt"
+                                        target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                            aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <!-- Gazette Welcome Post -->
+                        <div class="gazette-welcome-post">
+                            <!-- Post Tag -->
+                            <div class="gazette-post-tag">
+                                <a href="#">Politics</a>
+                            </div>
+                            <h2 class="font-pt">AOC劣势3：金钱<br></br></h2>
+                            <p class="gazette-post-date">2021年1月20日</p>
+                            <!-- Post Thumbnail -->
+                            <div class="blog-post-thumbnail my-5">
+                                <img src="politics/img/1_1.jpg" style="max-height: 250px; width: auto;" alt="国会">
+                            </div>
+                            <!-- Post Excerpt -->
+                            <p>在美国选举中，金钱极其重要。竞选团队和广告宣传都需要大量的钱来维持，如果没有钱，绝大多数政客都没有办法让选民知道自己的存在，更不要说自己的政策和履历了。
+                                据统计，从2000到2016，90%以上的众议员选举赢家都是花钱最多的那位候选人，唯一的例外是2010年中期选举，赢家比例也为86%。 如此夸张的数据证明了金钱的力量，如果不是偶尔有AOC这样的黑马作为反例，金钱似乎真的能决定一切选举的结果。                                
+                            </p>
+                            <!-- Reading More -->
+                            <div class="post-continue-reading-share mt-30">
+                                <div class="post-continue-btn">
+                                    <a href="politics/aoc3.html" class="font-pt"
+                                        target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                            aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <!-- Gazette Welcome Post -->
+                        <div class="gazette-welcome-post">
+                            <!-- Post Tag -->
+                            <div class="gazette-post-tag">
+                                <a href="#">Politics</a>
+                            </div>
+                            <h2 class="font-pt">左翼反建制派的政策优势<br></br></h2>
+                            <p class="gazette-post-date">2021年1月20日</p>
+                            <!-- Post Thumbnail -->
+                            <div class="blog-post-thumbnail my-5">
+                                <img src="politics/img/1_1.jpg" style="max-height: 250px; width: auto;" alt="国会">
+                            </div>
+                            <!-- Post Excerpt -->
+                            <p>在前三篇文章中，我们介绍了克劳利的竞选优势（AOC的劣势）。首先，AOC想要进入国会，就必须进入垄断美国政治的两党之一，她于是参加了民主党的初选，直面已经连任了十届众议员的克劳利。作为民主党建制派，克劳利拥有强大的人脉，收获了大量知名政客和政治组织的背书。同时，克劳利还有金钱优势，通过自己和大企业的密切关系，募到了超AOC十倍的竞选资金。 但是，尽管在名望，人脉和资金上都远不如克劳利，AOC也有自己的优势：受欢迎的左翼政策，反建制派的形象，以及努力的竞选团队。本文将介绍AOC的第一大优势，她受欢迎的政策主张。                                 
+                            </p>
+                            <!-- Reading More -->
+                            <div class="post-continue-reading-share mt-30">
+                                <div class="post-continue-btn">
+                                    <a href="politics/aoc4.html" class="font-pt"
+                                        target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                            aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-12 col-md-4">
+                        <!-- Gazette Welcome Post -->
+                        <div class="gazette-welcome-post">
+                            <!-- Post Tag -->
+                            <div class="gazette-post-tag">
+                                <a href="#">Politics</a>
+                            </div>
+                            <h2 class="font-pt">左翼反建制派的政治形象优势<br></br></h2>
+                            <p class="gazette-post-date">2021年1月20日</p>
+                            <!-- Post Thumbnail -->
+                            <div class="blog-post-thumbnail my-5">
+                                <img src="politics/img/1_1.jpg" style="max-height: 250px; width: auto;" alt="国会">
+                            </div>
+                            <!-- Post Excerpt -->
+                            <p>在前文中我们说过很多政客在选举时能获取的优势：党派，人脉（背书），金钱，还有政策受欢迎程度。但是美国的民主体制选出的是个人，选民关注的也是个人，因而个人的形象在选举中与前述的优势同等重要（同样起着举足轻重的作用）。以克劳利为代表的建制派政客有着无能，腐败，以及和普通民众脱节的形象。通过攻击他们的政治形象，AOC这类建制派候选人得以树立起自己有执行力，清白，亲民的形象，在选举中获得优势。                                  
+                            </p>
+                            <!-- Reading More -->
+                            <div class="post-continue-reading-share mt-30">
+                                <div class="post-continue-btn">
+                                    <a href="politics/aoc5.html" class="font-pt"
+                                        target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                            aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <!-- Gazette Welcome Post -->
+                        <div class="gazette-welcome-post">
+                            <!-- Post Tag -->
+                            <div class="gazette-post-tag">
+                                <a href="#">Politics</a>
+                            </div>
+                            <h2 class="font-pt">左翼反建制派的竞选团队优势<br></br></h2>
+                            <p class="gazette-post-date">2021年1月20日</p>
+                            <!-- Post Thumbnail -->
+                            <div class="blog-post-thumbnail my-5">
+                                <img src="politics/img/1_1.jpg" style="max-height: 250px; width: auto;" alt="国会">
+                            </div>
+                            <!-- Post Excerpt -->
+                            <p>作为体制外的候选人，AOC在选举中天然具有劣势。在选区里，克劳利当了20年的民主党众议员，而AOC只是一个无人知晓的28岁年轻人。为克劳利背书的政治人物和组织从州长市长参议员众议员，到市议员，民主党在皇后区的工作人员，主流的民间议题组织（工会，堕胎权，枪支管控），应有尽有，他所拥有的的政治支持远超AOC。论宣传，克劳利募集到的竞选资金超过3百万美元，是AOC的11倍，而他花费了其中的150万，以此聘请专业的竞选团队和发布大量的广告，这一支出是AOC竞选开销的18倍。 当然，AOC也不是毫无优势。前两篇文章中，笔者介绍了AOC受欢迎的左翼政策和政治形象（与之对应的是克劳利为代表的的建制派不受欢迎的中庸政策和政治形象）。此外，AOC和其团队还拥有非凡的竞选能力，凭借着年轻人的拼劲和创意淘汰了政治老人克劳利。                                   
+                            </p>
+                            <!-- Reading More -->
+                            <div class="post-continue-reading-share mt-30">
+                                <div class="post-continue-btn">
+                                    <a href="politics/aoc6.html" class="font-pt"
+                                        target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                            aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <!-- Gazette Welcome Post -->
+                        <div class="gazette-welcome-post">
+                            <!-- Post Tag -->
+                            <div class="gazette-post-tag">
                                 <a href="#">Politics</a>
                             </div>
                             <h2 class="font-pt">唐纳德·特朗普的雾月一十八日（上）<br></br></h2>
