--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                         </h3>
                                         <p class="editorial-post-date mb-15">Welcome to Madnews!</p>
                                         <p style="color:grey">
-                                            (新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。）
+                                            欢迎各位来到麦迪讯的官方网页~我们专注于为麦迪逊当地华人提供麦迪逊本地疫情消息（包括疫情简讯，以及疫情地图）；我们也提供麦迪逊本地，国内，以及国际新闻和丰富实用的攻略。同时，我们也积极关心时事热点，发表对于时事热点的观点与点评。总之，你能在这里找到任何你想知道的，了解的事情！我们也在这里随时乐意为你提供帮助。我们欢迎你在这里和我们一起讨论天下大事，共同进步成长。
                                         </p>
                                     </div>
                                 </div>
