--- a/about.html
+++ b/about.html
@@ -396,7 +396,7 @@
                                 <div class="team-member-data">
                                     <h4 class="font-pt">袁立豪</h4>
                                     <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">社长、编辑</h5>
+                                        <h5 class="font-pt mb-0">前任社长、编辑</h5>
                                     </div>
                                 </div>
                             </div>
