新添加1文体&3财经

--- a/business/category.html
+++ b/business/category.html
@@ -257,6 +257,7 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
@@ -264,20 +265,46 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Business</a>
                                 </div>
-                                <h4 class="font-pt">有点像朋友圈？浅谈比特币交易系统的设计</h4>
-                                <p class="gazette-post-date">2021年1月25日</p>
+                                <h4 class="font-pt">美国11月通胀率同比上升6.8%，为近40年最高水平</h4>
+                                <p class="gazette-post-date">2021年12月20日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
-                                    <img src="img/image6.png" style="max-height: 250px; width: auto;"
-                                        alt="有点像朋友圈？浅谈比特币交易系统的设计">
+                                    <img src="img/22.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="中国人民银行">
                                 </div>
                                 <!-- Post Excerpt -->
-                                <p>刚刚过去的2020年比特币价格暴涨，投机气氛甚浓。笔者近日试图去理解与思考比特币交易系统的设计思路，其价值来源于哪里，长期而言比特币的前景如何等问题，并将自己近日所了解到的东西记录下来，写成了两篇文章。本文是第一篇，试图用最通俗的语言解释比特币交易系统是如何运转的。
+                                <p>近日，人民银行和银保监会联合印发《关于做好重点房地产企业风险处置项目并购金融服务的通知》（下称《通知》）。接近监管人士对中国证券报记者表示，鼓励优质房地产企业并购出险房地产企业的项目，是按照市场化方式出清风险的有力举措。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="inflation.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
+                                <h4 class="font-pt">美国11月通胀率同比上升6.8%，为近40年最高水平</h4>
+                                <p class="gazette-post-date">2021年12月13日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/640.png" style="max-height: 250px; width: auto;"
+                                        alt="商汤">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>摘自华尔街日报的报道，商汤科技(SenseTime Group Inc.)正试图挽救其IPO计划，此前拜登政府已将这家中国AI公司列入黑名单，禁止美国投资者购买其股票。商汤科技上周五没有按原上市计划为其IPO定价，使该公司在一周后的12月17日上市的计划遭受挫折。赴香港上市的公司通常会在股票开始交易前一周为IPO定价，已经认购股票的投资者在发行价确定前不会将钱汇出。
                                 </p>
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="bitcoin.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                        <a href="inflation.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
                                                 class="fa fa-chevron-right" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
@@ -332,6 +359,61 @@
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
                                         <a href="qiandama.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
+                                <h4 class="font-pt">是泡沫还是革命？漫谈比特币的价值与前景</h4>
+                                <p class="gazette-post-date">2021年3月3日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/18.png" style="max-height: 250px; width: auto;"
+                                        alt="bitcoin">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>在上一篇文章中我们解释了比特币交易系统的基本设计，是在从技术的角度出发聊比特币，这一篇笔者则从经济学的角度谈谈比特币。即使说比特币在我国基本上不可能被官方认可（国家已经在很大程度上限制了比特币），但是对比特币在世界范围内的前景做一些思考却依然是有益的。本文将从比特币的价值来源开始谈起，而后讨论此次比特币牛市的主要推动力；接着笔者会讨论从长远的角度看比特币的前景怎么样；最后我们将借助黄金来给比特币做一个简单的估值。笔者稍后的第三篇文章将会讨论比特币是否是庞氏骗局，而最后一篇则将拿比特币与央行研究中的数字货币（DCEP）做以对比和分析。值得提醒的是，本文并非投资建议，我们的主要目的在于理解比特币以及经济运行的规律。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="inflation.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
+                                <h4 class="font-pt">有点像朋友圈？浅谈比特币交易系统的设计</h4>
+                                <p class="gazette-post-date">2021年1月25日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/image6.png" style="max-height: 250px; width: auto;"
+                                        alt="有点像朋友圈？浅谈比特币交易系统的设计">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>刚刚过去的2020年比特币价格暴涨，投机气氛甚浓。笔者近日试图去理解与思考比特币交易系统的设计思路，其价值来源于哪里，长期而言比特币的前景如何等问题，并将自己近日所了解到的东西记录下来，写成了两篇文章。本文是第一篇，试图用最通俗的语言解释比特币交易系统是如何运转的。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="bitcoin.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
                                                 class="fa fa-chevron-right" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
