--- a/recreation/category.html
+++ b/recreation/category.html
@@ -264,6 +264,34 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Recreation</a>
                                 </div>
+                                <h4 class="font-pt">作为威斯康辛大学的学生，怎么会不观看一场橄榄球赛？</h4>
+                                <p class="gazette-post-date">2021年10月18日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/2.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="作为威斯康辛大学的学生，怎么会不观看一场橄榄球赛？">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>                                10月15日晚，在兰德尔体育场（Camp Randall）举行的橄榄球比赛中，威斯康星獾队(UW Badgers) 以20-14的比分战胜了军队黑骑士队 (Army Black Knights，西点军校校队)。獾队出色的线卫（linebacker）帮助球队维持了领先，制止了对手的反扑，让球队自9月11日来第一次在主场取胜（参考消息来源：ESPN）</b>
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="football.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Recreation</a>
+                                </div>
                                 <h4 class="font-pt">触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</h4>
                                 <p class="gazette-post-date">2021年4月17日</p>
                                 <!-- Post Thumbnail -->
