--- a/recreation/category.html
+++ b/recreation/category.html
@@ -257,6 +257,36 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Recreation</a>
+                                </div>
+                                <h4 class="font-pt">放弃美国国籍，代表中国参加冬奥会之文武双全健儿——谷爱凌</h4>
+                                <p class="gazette-post-date">2022年2月5日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/guailing.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="放弃美国国籍，代表中国参加冬奥会之文武双全健儿——谷爱凌">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>                    北京冬奥会就在昨天拉开了序幕，最引起我关注的是一位出生在美国旧金山，后来选择加入中国国籍的18岁女孩--Eileen Gu。在去年12月份开始的冬奥会测试赛期间，她37天内拿下9枚奖牌，其中6枚金牌。2022年北京冬奥会，谷爱凌也代表中国，征战奥运。
+
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="guailing.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
